fix delivery driver
