# src/controllers/category/category.controller.ts
@@ -11,8 +11,15 @@ export const getCategory = async (req: Request, res: Response): Promise<Response
     return res.json({ total, data });
 };
 
-// export const createCategory = async (req: Request, res: Response): Promise<Response> => {
-//     try{
+export const createCategory = async (req: Request, res: Response) => {
+    try{
+        const data = req.body;
+        const newCategory = await getRepository(Category).create(data);
+                            await   getRepository(Category).save(newCategory);
 
-//     }
-// }
+        res.status(201).json({message : "created"});
+    } 
+    catch(err){
+      console.log(err);
+    }
+}
