# src/swagger/configSwagger.json
@@ -323,6 +323,55 @@
                 }
             }
         },
+        "/category":{
+            "get": {
+                "tags": [
+                    "Lấy danh sách loại hàng"
+                ],
+                "summary": "GET tất các các loại hàng",
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "schema": {
+                            "$ref": "#/definitions/category"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "tags": [
+                    "Tạo loại hàng"
+                ],
+                "summary": "Tạo loại hàng",
+                "requestBody": {
+                    "description": "Các thuộc tính bắt buộc : ",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/definitions/category"
+                            },
+                            "example": {
+                                "name": "Tên loại hàngg"
+                                
+                            }
+                        }
+                    }
+                },
+                "produces": [
+                    "application/json"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success"
+                    },
+                    "400": {
+                        "description": "Failed. Bad post data."
+                    }
+                }
+            }
+        }
+        },
         "/jobs?page={PAGE}&page_size={PAGE_SIZE}": {
             "get": {
                 "tags": [
@@ -1286,8 +1335,7 @@
                     }
                 }
             }
-        }
-    },
+        },
     "definitions": {
         "id": {
             "properties": {
@@ -1397,6 +1445,25 @@
                     "type": "object",
                     "additionalProperties": {
                         "$ref": "#/definitions/Job"
+                    }
+                }
+            }
+        },
+        "category": {
+            "type": "object",
+            "properties": {
+                "nameJob": {
+                    "type": "string"
+                }
+            }
+        },
+        "categories": {
+            "type": "array",
+            "properties": {
+                "Jobs": {
+                    "type": "object",
+                    "additionalProperties": {
+                        "$ref": "#/definitions/category"
                     }
                 }
             }
